examples/failing/ReadShow.ps
extern read :: forall a. String -> a

extern show :: forall a. a -> String

test = \x -> show (read x)
